[package]
description = "Benches for MCS lock implementation."
name = "benches"
version = "0.0.0"
edition = "2021"
readme = "README.md"
publish = false

[lib]
bench = false

[dependencies]
mcslock = { version = "*", path = "../", default-features = false }
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "busy"
harness = false
required-features = []

[[bench]]
name = "yield"
harness = false
required-features = ["mcslock/yield"]
